fix perfect scrollbar

--- a/app/assets/stylesheets/editor-3/editor.css.scss
+++ b/app/assets/stylesheets/editor-3/editor.css.scss
@@ -85,7 +85,6 @@
   bottom: -1px !Important; // Resets standard scroll bar position
   height: 4px !Important; // Resets standard scroll bar color
   background: #AAA;
-  min-width: 120px;
   pointer-events: all;
   opacity: 0.6;
 }
